[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/objects/bullet.png" type="Texture" id=1]
[ext_resource path="res://art/objects/bomb.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/hud.gd" type="Script" id=3]
[ext_resource path="res://fonts/mini_square_font.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "notif_appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Notification:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "notif_disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Notification:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="HBoxContainer"]
margin_left = 453.0
margin_right = 453.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 457.0
margin_right = 472.0
margin_bottom = 60.0
rect_min_size = Vector2( 15, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
margin_left = 476.0
margin_right = 506.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/notif_appear = SubResource( 1 )
anims/notif_disappear = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -43.7285
margin_top = 99.4464
margin_right = 158.271
margin_bottom = 112.446
rect_rotation = -90.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="Bullets" type="Control" parent="."]
visible = false
margin_left = 640.0
margin_top = 503.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bullets"]
margin_left = 158.0
margin_right = 316.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect0" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_right = 19.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="TextureRect1" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 23.0
margin_right = 42.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 46.0
margin_right = 65.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 69.0
margin_right = 88.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 92.0
margin_right = 111.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 115.0
margin_right = 134.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="BombContainer" type="MarginContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -263.0
margin_top = -39.0
margin_right = -160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="BombContainer"]
margin_right = 103.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Bomb" type="TextureRect" parent="BombContainer/HBoxContainer3"]
modulate = Color( 0.882353, 0.737255, 0.168627, 1 )
margin_right = 43.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="BombNb" type="Label" parent="BombContainer/HBoxContainer3"]
margin_left = 47.0
margin_right = 55.0
margin_bottom = 39.0
size_flags_vertical = 5
text = "1"
valign = 1

[node name="Container" type="MarginContainer" parent="BombContainer/HBoxContainer3"]
margin_left = 59.0
margin_right = 103.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
